# libpostal

./: .gitignore  CMakeLists.txt
src/: address_dictionary_builder.c  language_classifier_io.c  shuffle.c
